tests/error/invalid_return.gw
#! [contains] invalid return type
fun void test() { return 1; }
